fix: fix TagPicker default spacing issue

--- a/src/TagPicker/styles/index.less
+++ b/src/TagPicker/styles/index.less
@@ -57,46 +57,45 @@
   }
 }
 
-.rs-picker-textbox {
-  .rs-picker-tag-list {
-    display: contents;
-
-    .rs-tag-lg {
-      margin-top: 6px;
-      margin-left: 6px;
-    }
-
-    .rs-tag-md {
-      margin-top: 5px;
-      margin-left: 5px;
-    }
-
-    .rs-tag-sm {
-      margin-top: 4px;
-      margin-left: 4px;
-    }
-  }
+.rs-picker-tag-list {
+  display: contents;
 }
 
 .rs-plaintext .rs-tag {
   margin: 0;
 }
 
+// Tag Picker Size
+// --------------------------------------------------
 .rs-picker-tag-lg {
   .rs-tag-picker-size(@padding-y-lg - 1; @padding-x-lg; @font-size-large; @line-height-large);
   .rs-picker-textbox {
     min-height: 40px;
   }
+  .rs-picker-tag-list .rs-tag-lg {
+    margin-top: 6px;
+    margin-left: 6px;
+  }
 }
 
+// Default size
+.rs-picker-tag,
 .rs-picker-tag-md {
   .rs-tag-picker-size(@padding-y; @padding-x; @font-size-base; @line-height-base);
+  .rs-picker-tag-list .rs-tag-md {
+    margin-top: 5px;
+    margin-left: 5px;
+  }
 }
 
 .rs-picker-tag-sm {
   .rs-tag-picker-size(@padding-y-sm; @padding-x-sm; @font-size-base; @line-height-base);
   .rs-picker-textbox {
     min-height: 28px;
+  }
+  .rs-picker-tag-list .rs-tag-sm {
+    margin-top: 4px;
+    margin-left: 4px;
   }
 }
 
